package com.winston.file.buildmodel.simplefactory;

/**
 * @author Winston
 * @date 2022/3/4
 */
public abstract class Product {

    abstract String type();

}