package com.winston.file.buildmodel.simplefactory;

/**
 * @author Winston
 * @date 2022/3/4
 */
public class ProductA extends Product {
    @Override
    String type() {
        return "A";
    }
}