package com.winston.file.buildmodel.simplefactory;

/**
 * @author Winston
 * @date 2022/3/4
 */
public class ProductB extends Product {

    @Override
    String type() {
        return "B";
    }

}
